--- a/public/style/style.css
+++ b/public/style/style.css
@@ -119,7 +119,7 @@
     color:rgb(15, 126, 217) ;
     font-family: Georgia;
 }
-#suppression_du_membre{
+#suppression_du_groupe{
     color:rgb(15, 126, 217) ;
     font-family: Georgia;
 }
