--- a/public/style/style.css
+++ b/public/style/style.css
@@ -283,24 +283,7 @@ nav{
     border-radius: 5px;
     background-color: #f1f1f1;
 }
-#saved{
-    background-color: #04205c;
-    color:#d3a202;
-    height:35px;
-    width: 80px;
-    font-weight: bolder;
-    border-radius: 5px;
-    margin: 5px 0px 0px ;
-    font-family: Georgia;
-}
-#saved:hover{
-    background-color: #f1f1f1;
-    color: e#04205c;
-    font-weight: bolder;
-    border: 1px solid #d3a202;
-    border-radius: 5px;
-    
-}
+
 
 #update_password{
     color: orange;
@@ -337,7 +320,7 @@ nav{
     background-color: red;
     color:#d3a202;
     height:30px;
-    width: 180px;
+    width: auto;
     border-radius: 5px;
     font-weight: bolder;
     font-family: Georgia;
@@ -355,7 +338,7 @@ nav{
     background-color: blue;
     color:#d3a202;
     height:30px;
-    width: 100px;
+    width: auto;
     border-radius: 5px;
     margin: 5px 0px 0px ;
     font-weight: bolder;
@@ -378,4 +361,21 @@ nav{
 }
 #form_profile_informatin{
     background-color:  black;
+}
+#saved{
+    background-color: blue;
+    color:#d3a202;
+    height:30px;
+    width: auto;
+    border-radius: 5px;
+    margin: 5px 0px 0px ;
+    font-weight: bolder;
+    font-family: Georgia ;
+    margin: 20px 4px 6px;
+}
+#saved:hover{
+        background-color:  gray;
+        color:blue;
+        border: 1px solid blue;
+        border-radius: 5px;
 }
